# fscryptrs

./: .gitignore  Cargo.toml  README.md
benchmarks/archive_extract/: cleanup.sh  dl_linux.sh  extract.sh  prepare.sh
benchmarks/archive_extract/other/: encfs.xml  prepare_encfs.sh  prepare_gocryptfs.sh
benchmarks/archive_extract/results/: results.json
benchmarks/plots/: vis_extract.ipynb  vis_sequential_rw.ipynb
benchmarks/single_file_performance/: single_file_throughput.sh
benchmarks/single_file_performance/results/: default_100_rw_1G_1.out  default_100_rw_1M_1024.out  fscryptrs_aes_bla_blk_100_rw_1G_1.out  fscryptrs_aes_bla_blk_100_rw_1M_1024.out  fscryptrs_aes_non_blk_100_rw_1G_1.out  fscryptrs_aes_non_blk_100_rw_1M_1024.out  gocryptfs_100_rw_1G_1.out  gocryptfs_100_rw_1M_1024.out
src/: crypto.rs  lib.rs  main.rs  types.rs
src/crypto/: block_file.rs  stream_file.rs  traits.rs
tests/: cleanup.sh  gen_tests.sh
